<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:id="@+id/linearSelectGame"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.douglimar.surpresinha.SelectGameActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:id="@+id/tvSelectGameTitle2"
        />

    <Button
        android:id="@+id/btnSingleGame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rounded_button"
        android:text="@string/gerarJogoUnico" />

    <Button
        android:id="@+id/btnMultipleGames"
        android:layout_width="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/rounded_button"
        android:text="@string/gerarMultiplosJogos" />


    <Button
        android:id="@+id/btnLastResults"
        android:layout_width="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/rounded_button"
        android:text="@string/LastResults" />



    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewSelect2"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_TESTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
